--- a/my-app/components/buttons/buttonsstyle.module.css
+++ b/my-app/components/buttons/buttonsstyle.module.css
@@ -1,33 +1,20 @@
-.container{
+.box{
     display: flex;
     flex-direction: row;
     gap: 8px;
     align-items:center;
-
     box-sizing: border-box;
-
 }
 
 .button{
     width: 20px;
     height: 20px;
-
     border-radius: 4px;
     padding: 4px;
     text-align: center;
     user-select: none;
 }
 
-.digit{
-    font-family: 'Libre Franklin', sans-serif;    
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 20px;
-
-    /* Text/primary */
-    color: #1B1F23;
-}
 
 .active{
     background: #FF5500;
@@ -36,4 +23,13 @@
 
 .disabled{
     background: #FFA375;
+}
+
+.digit{
+    font-family: 'Libre Franklin', sans-serif;    
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+    color: #1B1F23;
 }
